// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<B /> should match shallow snapshot 1`] = `
<nav>
  <C
    id={0}
    key="0"
  />
  <C
    id={1}
    key="1"
  />
  <C
    id={2}
    key="2"
  />
</nav>
`;

exports[`<B /> should match snapshot 1`] = `
<B>
  <nav>
    <C
      id={0}
      key="0"
    >
      <a
        href="#"
      >
        I am link 
        0
        .
      </a>
    </C>
    <C
      id={1}
      key="1"
    >
      <a
        href="#"
      >
        I am link 
        1
        .
      </a>
    </C>
    <C
      id={2}
      key="2"
    >
      <a
        href="#"
      >
        I am link 
        2
        .
      </a>
    </C>
  </nav>
</B>
`;
